--- a/style.css
+++ b/style.css
@@ -2,13 +2,17 @@
     margin: 0;
 }
 .one{
-
+    float: left;
+    position: fixed;
+    top: 0%;
+    list-style: none;
 }
 .two{
     float: right;
     position: fixed;
     top: 0%;
     right: 0%;
+    list-style: none;
 }
 img{
     position: fixed;
@@ -18,13 +22,45 @@ img{
 }
 p{
     position: fixed;
-    bottom: 10%;
-    right: 42%;
+    bottom: 20%;
+    right: 40%;
     top: 18%;
 }
-.navebar{
+.nav{
+    display: flex;
+    margin-top: 12%;
+    justify-content: center;
+    flex-direction: row;
+    border: 2px solid black; 
+}
+.div1{
     position: fixed;
-    bottom: 73%;
-    right: 20%;
+    right: 1%;
+    bottom: 21%;
+    border: 1px solid goldenrod;
+}
+.div1 h2{
+ text-align: start;
+ background-color: gray;
+}
+.div1 ol li{
+    width: 200px;
+    height: 67px;
+}
+.div2 .img2{
+    position: fixed;
+    right:30% ;
+    top:32%;
+    width: 523px;
+    height: 300px;
+}
+.div2 a{
+    position: fixed;
+    bottom: 24%;
+    right: 30%;
     border: 2px solid black;
+    padding: 8px;
+    background-color:gray;
+    width: 35%;
+    text-align: center;
 }
